--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@convex-dev/auth": "^0.0.87",
+    "convex": "^1.25.0",
     "framer-motion": "^11.3.28",
     "lightgallery": "^2.7.2",
     "next": "14.2.5",
@@ -17,6 +19,7 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@auth/core": "^0.40.0",
     "daisyui": "^4.12.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
